@@ -1,6 +1,10 @@
 12-Oct-2003
 -Fixed a bug in iXY classes.
 -Added note about black screen to readme
+-fixed bug where MiniMapView was drawing outside it's view space, leading to
+ crashes.
+-add signal handlers to make it abort more nicely in error case (don't stay in
+ mouse/keyboard grab mode)
 
 11-Oct-2003 by Matthias Braun
 -added a release script
